# Apertar-Core

./: CMakeLists.txt  README.md
include/apertar/core/: Types.hpp
src/: ApertarCoreApp.cpp  ApertarCoreApp.hpp  main.cpp
src/camera/: CameraController.cpp  CameraController.hpp
src/cdng/: CdngEncoder.cpp  CdngEncoder.hpp  IfdBuilder.hpp
src/ipc/: ControlProtocol.cpp  ControlProtocol.hpp  ControlServer.cpp  ControlServer.hpp
